# web-protocol

./: README.md
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp  testfile.txt  usual.hpp
